--- a/package.json
+++ b/package.json
@@ -42,5 +42,8 @@
     "karma-jasmine": "~5.1.0",
     "karma-jasmine-html-reporter": "~2.1.0",
     "typescript": "~5.5.4"
+  },
+  "overrides": {
+    "tar": "^7.5.3"
   }
 }
